fix: title not aligned on mobile

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,3 +1,4 @@
+$black: #131313;
 $light: #E3E3E3;
 $dark: #333333;
 $darkGray: #666666;
